samples/_failures_safe/1761531370_911f7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e966771.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4e966771.c:172:9: error: expected identifier at end of input
  172 |         tokens[token_count].
      |         ^~~~~~
./samples/SAFE/__tmp_4e966771.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e966771.c:172:9: error: expected declaration or statement at end of input
